Changes for 1.0.4

* Changed testCanRetreatIntoBlitzedTerritory() to allow retreat into blitzed territory per AA.org (ComradeKev)

* fix bugs 2815448 defending subs not getting sneak attack (Seidelin) 

* fix bug 2813511 naval units not asked to retreat (Seidelin)

* fix bug 2807885 fighters asked which transport to load (Seidelin)

* Partial refactor of validateAirCanLand (ComradeKev)

* add isInfantry marker to infantry units for all mods, not just aa50 (sgb)

* fix bug where strat bombers hit by aa en route to a battle lives (sgb)

* fix bug 2816632 Marine unit doesn't work with LL (sgb)

* fix bug 1888062 multinational transport bug (sgb)

* remove non working "Use Destroyers and Artillery" in Iron Blitz (sgb)

* fix bug 2815448, AA50: Defending subs don't get sneak defense (sgb)

* fix bug 2803021, NWO IPCs to spend don't display (sgb)

* move copies of blank_relief to images/relief tiles, this allows all maps to share a copy (sgb)

* change labels/dialog on repair screen to make it clear we are not purchasing units (sgb)

* fix bug 2802962, bug where units loaded onto transports in a pending battle zone do not die when their trasnsports do (sgb)

* fix bug 2807875, Factories count towards production limit (sgb)

* fix bug 2815801 Bid placement Error (sgb)

* Complete gutting of NonCombatMoveSea; Removed most plane analysis code and replaced with calls to invitePlaneAttack in SUtils; 
  tweak to purchasing when resources are high to help with other maps; 
  prepared code for purchasing units for the best transport attack (Kevin Moore)

* Add some missing units for NWO and activate tech for extra 4 players in NWO-9 (ComradeKev)

* Check if SBR damages unit production before displaying factory damage (ComradeKev)

* Fix bug 2801738 just use Infantry instead of chineseInfantry so they stack properly (ComradeKev)

* Add victory conditions to game notes (ComradeKev)

* Add NOs to game notes for AA50 (ComradeKev)
