@@ -371,7 +371,8 @@ public class TripleAPlayer extends AbstractHumanPlayer<TripleAFrame> implements 
         	for(Territory t : Match.getMatches(data.getMap().getTerritories(), Matches.territoryHasOwnedFactory(data, m_id))) 
         	{
         		TerritoryAttachment ta = TerritoryAttachment.get(t);
-        		if(ta.getProduction() != ta.getUnitProduction())
+        		//Kev changed this to > from !=
+        		if(ta.getProduction() > ta.getUnitProduction())
         		{
         			bombedTerrs.add(t);
         		}
