@@ -1,5 +1,9 @@
 Changes for 1.0.4
 
+* fix partially repaired factories showing as completely repaired (ComradeKev)
+
+* fix bug 2818023 moving unit to carried-over battle causes existing units to be ignored (ComradeKev)
+
 * Changed testCanRetreatIntoBlitzedTerritory() to allow retreat into blitzed territory per AA.org (ComradeKev)
 
 * fix bugs 2815448 defending subs not getting sneak attack (Seidelin) 
